--- a/index.ipynb
+++ b/index.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "2769777e",
    "metadata": {
     "editable": true,
@@ -21,12 +21,22 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<link href='http://fonts.googleapis.com/css?family=Fenix' rel='stylesheet' type='text/css'>\n",
        "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
        "<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:300,400' rel='stylesheet' type='text/css'>\n",
-       "<link href=\"https://fonts.googleapis.com/css?family=Oswald|Raleway\" rel=\"stylesheet\" type='text/css'> \n",
+       "<link href=\"https://fonts.googleapis.com/css?family=Oswald|Raleway\" rel=\"stylesheet\" type='text/css'>\n",
+       "<link href=\"https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,100..900;1,100..900&family=Fira+Mono:wght@400;500;700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Markazi+Text:wght@400..700&family=Outfit:wght@100..900&display=swap\" rel=\"stylesheet\">\n",
+       "<link href=\"https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap\" rel=\"stylesheet\">\n",
+       "\n",
        "<style>\n",
        ".prompt{\n",
        "    display: none !important;\n",
@@ -54,8 +64,9 @@
        "        /*margin-right:auto;*/\n",
        "    }\n",
        "    h1, h2, h3, h4, h5 {\n",
-       "        font-family: 'Oswald', sans-serif; !important;\n",
-       "        font-style: oblique !important;\n",
+       "        font-family: 'Merriweather' !important;\n",
+       "        font-weight: semi-bold !important;\n",
+       "        font-style: italic !important;\n",
        "    }\n",
        "    div.text_cell_render{\n",
        "        font-family: 'Raleway', sans-serif; !important;\n",
@@ -296,7 +307,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "30e06969",
    "metadata": {
     "editable": true,
@@ -318,7 +329,16 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -326,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "283ebbd3",
    "metadata": {},
    "outputs": [],
